# audio-visualizer

./: .gitignore
audio-visualizer/: .gitignore  MainWindow.xaml  MainWindow.xaml.cs  audio-visualizer.csproj
renderEngine/: CMakeGen.bat  CMakeLists.txt  premake5.lua
renderEngine/renderEngine/src/: main.cpp
renderEngine/rendererSolution/: rendererSolution.sln
renderEngine/rendererSolution/rendererSolution/: CMakeLists.txt  main.cpp  rendererSolution.vcxproj
renderEngine/rendererSolution/rendererSolution/Debug/: vc143.idb
renderEngine/rendererSolution/rendererSolution/Debug/rendererSolution.tlog/: rendererSolution.lastbuildstate
renderEngine/rendererSolution/rendererSolution/x64/Debug/: vc143.idb
renderEngine/rendererSolution/rendererSolution/x64/Debug/rendererSolution.tlog/: rendererSolution.lastbuildstate
renderEngine/src/: AVDataStructures.h  GraphicsPipeline.cpp  GraphicsPipeline.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
visualizerEngine/: visualizerEngine.sln  visualizerEngine.vcxproj  visualizerEngine.vcxproj.filters
visualizerEngine/Source/: Graphics.cpp  Graphics.h  VulkanDebugLayers.cpp  VulkanDebugLayers.h  VulkanImpl.cpp  VulkanImpl.h  main.cpp
visualizerGUI/: App.xaml  App.xaml.cs  FrequencyParameterMapperWindow.xaml  FrequencyParameterMapperWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  audio-visualizer.csproj  audio-visualizer.sln  premake5.lua
visualizerGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs
